# chatbot

./: .env.example  Cargo.toml  ENV_CONFIG.md  rustfmt.toml
avatars/: default.json
src/: bot.rs  main.rs
src/llm/: deepseek.rs  doubao.rs  grok.rs  mod.rs
src/memory/: mod.rs  postgres.rs  redis.rs
src/persona/: mod.rs
src/platform/: mod.rs  onebot.rs  terminal.rs
src/prompt/: mod.rs
